--- a/app/textPage.html
+++ b/app/textPage.html
@@ -163,6 +163,7 @@
                     <li><a href="articles.html">Новости</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                     <li><a href="sertificats.html">Сертификаты</a></li>
+                    <li><a href="vacancy.html">Вакансии</a></li>
                 </ul>
             </div>
             <div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
