--- a/app/vacancy.html
+++ b/app/vacancy.html
@@ -83,54 +83,54 @@
 	</header>
 
 	<main>
-			<section class="main-divider divider">
-				<div class="container">
-					<div class="vacation-divider__content divider__content">
-                        <img src="img/_src/vacation-ellipse.png" alt="">
-                        <h2 class="product-describe__title">Работа у нас</h2>
-					</div>
+		<section class="main-divider divider">
+			<div class="container">
+				<div class="vacation-divider__content divider__content">
+					<img src="img/_src/vacation-ellipse.png" alt="">
+					<h2 class="product-describe__title">Работа у нас</h2>
 				</div>
-            </section>
-            <section class="text-block section-padding">
-                <div class="container">
-                        <h3>Название вакансии</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam, 
-                            alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius. 
-                            Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates 
-                            deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
-                        </p>
-                        <h3>Название вакансии</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam, 
-                            alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius. 
-                            Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates 
-                            deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
-                        </p>
-                        <h3>Название вакансии</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam, 
-                            alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius. 
-                            Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates 
-                            deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
-                        </p>
-                        <h3>Название вакансии</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam, 
-                            alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius. 
-                            Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates 
-                            deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
-                        </p>
-                        <h3>Название вакансии</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam, 
-                            alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius. 
-                            Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates 
-                            deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
-                        </p>
-                </div>
-            </section>
-		</main>
+			</div>
+		</section>
+		<section class="text-block section-padding">
+			<div class="container">
+				<h3>Название вакансии</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam,
+					alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius.
+					Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates
+					deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
+				</p>
+				<h3>Название вакансии</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam,
+					alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius.
+					Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates
+					deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
+				</p>
+				<h3>Название вакансии</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam,
+					alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius.
+					Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates
+					deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
+				</p>
+				<h3>Название вакансии</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam,
+					alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius.
+					Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates
+					deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
+				</p>
+				<h3>Название вакансии</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, enim. Laboriosam consequatur provident quam,
+					alias enim dolorum mollitia assumenda repudiandae voluptatibus nulla doloribus minus et rem libero eius.
+					Tempore dolores nulla at quos in assumenda, recusandae ipsum possimus temporibus id eius voluptates
+					deleniti doloribus laudantium aliquam quidem ipsa quae! Asperiores.
+				</p>
+			</div>
+		</section>
+	</main>
 
 	<div class="to-top">
 		<span class="to-top__arrow"></span>
@@ -148,6 +148,7 @@
 						<li><a href="articles.html">Новости</a></li>
 						<li><a href="contacts.html">Контакты</a></li>
 						<li><a href="sertificats.html">Сертификаты</a></li>
+						<li><a href="vacancy.html">Вакансии</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
