--- a/app/product.html
+++ b/app/product.html
@@ -340,7 +340,7 @@
 			<span class="to-top__arrow"></span>
 		</div>
 
-	<footer class="footer">
+		<footer class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 col-sm-12 footer__img footer__item">
@@ -352,6 +352,7 @@
 						<li><a href="articles.html">Новости</a></li>
 						<li><a href="contacts.html">Контакты</a></li>
 						<li><a href="sertificats.html">Сертификаты</a></li>
+						<li><a href="vacancy.html">Вакансии</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-auto col-md-4 d-sm-none d-lg-block footer__item to-hidden">
