--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-	<header class="header">
+		<header class="header">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-sm-12 header__logo">
@@ -37,7 +37,6 @@
 						<div class="header__info-item header__info-call-btn">
 							<button class="btn btn__standart" data-toggle="modal" data-target="#modal">заказать звонок</button>
 						</div>
-
 					</div>
 					<nav class="main-menu">
 						<div class="menu-mobile">
@@ -47,7 +46,7 @@
 								<span class="menu-mobile__bar-3"></span>
 								<p>Меню</p>
 							</button>
-							<button class="btn btn__standart btn__menu-mobile" data-toggle="modal" data-target="#modal">заказать звонок</button>
+							<button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
 						</div>
 						<ul id="menu" class="menu">
 							<li class="menu__item">
@@ -66,8 +65,8 @@
 								</a>
 							</li>
 							<li class="menu__item">
-								<a href="sertificats.html" class="menu__link">
-									<span>сертификаты</span>
+								<a href="vacancy.html" class="menu__link">
+									<span>Вакансии</span>
 								</a>
 							</li>
 							<li class="menu__item">
@@ -81,10 +80,12 @@
 			</div>
 		</div>
 	</header>
+
 		<main>
 			<section class="main-divider divider">
 				<div class="container">
 					<div class="main-divider__content divider__content">
+
 						<span>На этом месте будет<br> вкусный заголовок</span>	
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto ex placeat consequuntur 
