--- a/app/vacancy.html
+++ b/app/vacancy.html
@@ -27,9 +27,6 @@
 					<div class="header__info">
 						<div class="header__info-contacts">
 							<div class="header__info-item">
-								<span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
-							</div>
-							<div class="header__info-item">
 								<span class="header__phone list__item-img">+7 916 123-45-67</span>
 								<span class="header__mail list__item-img">Mail@mail.ru</span>
 							</div>
@@ -37,7 +34,6 @@
 						<div class="header__info-item header__info-call-btn">
 							<button class="btn btn__standart" data-toggle="modal" data-target="#modal">заказать звонок</button>
 						</div>
-
 					</div>
 					<nav class="main-menu">
 						<div class="menu-mobile">
@@ -47,7 +43,7 @@
 								<span class="menu-mobile__bar-3"></span>
 								<p>Меню</p>
 							</button>
-							<button class="btn btn__standart btn__menu-mobile" data-toggle="modal" data-target="#modal">заказать звонок</button>
+							<button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
 						</div>
 						<ul id="menu" class="menu">
 							<li class="menu__item">
@@ -66,8 +62,8 @@
 								</a>
 							</li>
 							<li class="menu__item">
-								<a href="sertificats.html" class="menu__link">
-									<span>сертификаты</span>
+								<a href="vacancy.html" class="menu__link">
+									<span>Вакансии</span>
 								</a>
 							</li>
 							<li class="menu__item">
@@ -83,6 +79,12 @@
 	</header>
 
 	<main>
+		<div class="breadcrumbs section-padding">
+			<div class="container">
+				<a href="index.html" class="breadcrumbs__main">Главная</a>
+				<a class="breadcrumbs__title">Вакансии</a>
+			</div>
+		</div>
 		<section class="main-divider divider">
 			<div class="container">
 				<div class="vacation-divider__content divider__content">
