--- a/app/articles.html
+++ b/app/articles.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="format-detection" content="telephone=no"/>
     <meta property="og:image" content="path/to/image.jpg">
     <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
@@ -27,8 +28,11 @@
                 <div class="header__info">
                     <div class="header__info-contacts">
                         <div class="header__info-item">
-                            <span class="header__phone list__item-img">+7 916 123-45-67</span>
-                            <span class="header__mail list__item-img">Mail@mail.ru</span>
+                            <span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
+                        </div>
+                        <div class="header__info-item">
+                            <a class="header__phone list__item-img">+7 916 123-45-67</a>
+                            <a class="header__mail list__item-img">Mail@mail.ru</a>
                         </div>
                     </div>
                     <div class="header__info-item header__info-call-btn">
@@ -41,9 +45,8 @@
                             <span class="menu-mobile__bar-1"></span>
                             <span class="menu-mobile__bar-2"></span>
                             <span class="menu-mobile__bar-3"></span>
-                            <p>Меню</p>
                         </button>
-                        <button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
+                        <img src="img/_src/smallLogo.svg" alt="" width="120">
                     </div>
                     <ul id="menu" class="menu">
                         <li class="menu__item">
@@ -99,7 +102,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -115,7 +118,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -131,7 +134,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -147,7 +150,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -163,7 +166,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -179,7 +182,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -195,7 +198,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -211,7 +214,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -227,7 +230,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -243,7 +246,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -259,7 +262,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -275,7 +278,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -291,7 +294,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -307,7 +310,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -323,7 +326,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
                                 Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
                             </p>
-                            <button class="btn btn__standart">подробнее</button>
+                            <div class="btn btn__standart">подробнее</div>
                         </a>
                     </div>
                 </div>
@@ -382,8 +385,12 @@
             <div class="col-xl-auto col-md-12  footer__item">
                 <ul class="footer__ul">
                     <li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
-                    <li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
-                    <li class="header__mail list__item-img footer__item-list">Mail@mail.ru</li>
+                    <li class="header__phone list__item-img footer__item-list">
+                        <a href="">+7 916 123-45-67</a>
+                    </li>
+                    <li class="header__mail list__item-img footer__item-list">
+                        <a href="">Mail@mail.ru</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -394,7 +401,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h1>
+                <h2 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h2>
                 <button type="button" class="btn close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
