--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta name="format-detection" content="telephone=no"/>
 		<meta property="og:image" content="path/to/image.jpg">
 		<link rel="icon" href="img/favicon/favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
@@ -30,8 +31,8 @@
 								<span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
 							</div>
 							<div class="header__info-item">
-								<span class="header__phone list__item-img">+7 916 123-45-67</span>
-								<span class="header__mail list__item-img">Mail@mail.ru</span>
+								<a class="header__phone list__item-img">+7 916 123-45-67</a>
+								<a class="header__mail list__item-img">Mail@mail.ru</a>
 							</div>
 						</div>
 						<div class="header__info-item header__info-call-btn">
@@ -44,9 +45,8 @@
 								<span class="menu-mobile__bar-1"></span>
 								<span class="menu-mobile__bar-2"></span>
 								<span class="menu-mobile__bar-3"></span>
-								<p>Меню</p>
 							</button>
-							<button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
+							<img src="img/_src/smallLogo.svg" alt="" width="120">
 						</div>
 						<ul id="menu" class="menu">
 							<li class="menu__item">
@@ -86,7 +86,7 @@
 				<div class="container">
 					<div class="main-divider__content divider__content">
 
-						<span>На этом месте будет<br> вкусный заголовок</span>	
+						<h1>На этом месте будет<br> вкусный заголовок</h1>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto ex placeat consequuntur 
 							laudantium itaque explicabo id nisi at reprehenderit, ab quaerat dolor quibusdam ut?
@@ -103,11 +103,11 @@
 								<img src="img/_src/main-about.png" alt="">
 							</div>
 							<div class="col-lg-6 col-md-12 main-about__info">
-								<h1 class="title__big">О компании</h1>
+								<h2 class="title__big">О компании</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 								<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 								<p style="margin-bottom: 0;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt </p>
-								<a href="textPage.html"><button class="btn btn__standart main-about__btn">подробнее</button></a>
+								<a href="textPage.html" class="btn btn__standart main-about__btn">подробнее</a>
 							</div>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 			</section>
 			<section class="main-advantages section-padding">
 				<div class="container">
-					<h1 class="title__big section-title">Наши преимущества</h1>
+					<h2 class="title__big section-title">Наши преимущества</h2>
 					<div class="row">
 						<div class="col-lg-3 col-md-6 col-sm-12 main-advantages__item">
 							<div class="main-advantages__dish-wrapper main-advantages__img-1"></div>
@@ -138,7 +138,7 @@
 			</section>
 			<section class="main-categories section-padding">
 				<div class="container">
-					<h1 class="title__big section-title">Категории</h1>
+					<h2 class="title__big section-title">Категории</h2>
 					<div class="grid">
 						<div class="grid__item main-categories__item">
 							<a href="catalog.html">
@@ -200,7 +200,7 @@
 			<section class="main-articles">
 				<div class="container">
 					<div class="articles__title">
-						<h1 class="title__big">Новости</h1>
+						<h2 class="title__big">Новости</h2>
 						<button class="btn btn__standart to-hidden">все статьи</button>
 					</div>
 					<div class="articles-cards grid">
@@ -216,7 +216,7 @@
 													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
 													Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
 												</p>
-												<button class="btn btn__standart">подробнее</button>
+												<div class="btn btn__standart">подробнее</div>
 											</a>
 										</div>
 									</div>
@@ -232,7 +232,7 @@
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
 										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
 									</p>
-									<button class="btn btn__standart">подробнее</button>
+									<div class="btn btn__standart">подробнее</div>
 								</a>
 							</div>
 						</div>
@@ -248,7 +248,7 @@
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quos soluta veniam.
 										Aliquam doloribus libero mollitia quisquam sapiente veniam? Eos?
 									</p>
-									<button class="btn btn__standart">подробнее</button>
+									<div class="btn btn__standart">подробнее</div>
 								</a>
 							</div>
 						</div>
@@ -297,8 +297,12 @@
 				<div class="col-xl-auto col-md-12  footer__item">
 					<ul class="footer__ul">
 						<li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
-						<li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
-						<li class="header__mail list__item-img footer__item-list">Mail@mail.ru</li>
+						<li class="header__phone list__item-img footer__item-list">
+							<a href="">+7 916 123-45-67</a>
+						</li>
+						<li class="header__mail list__item-img footer__item-list">
+							<a href="">Mail@mail.ru</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -309,7 +313,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h1 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h1>
+						<h2 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h2>
 						<button type="button" class="btn close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
