--- a/app/product.html
+++ b/app/product.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta name="format-detection" content="telephone=no"/>
 		<meta property="og:image" content="path/to/image.jpg">
 		<link rel="icon" href="img/favicon/favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
@@ -28,6 +29,9 @@
 					<div class="header__info">
 						<div class="header__info-contacts">
 							<div class="header__info-item">
+								<span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
+							</div>
+							<div class="header__info-item">
 								<span class="header__phone list__item-img">+7 916 123-45-67</span>
 								<span class="header__mail list__item-img">Mail@mail.ru</span>
 							</div>
@@ -42,9 +46,8 @@
 								<span class="menu-mobile__bar-1"></span>
 								<span class="menu-mobile__bar-2"></span>
 								<span class="menu-mobile__bar-3"></span>
-								<p>Меню</p>
 							</button>
-							<button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
+							<img src="img/_src/smallLogo.svg" alt="" width="120">
 						</div>
 						<ul id="menu" class="menu">
 							<li class="menu__item">
@@ -80,25 +83,26 @@
 	</header>
 
 		<main>
-			<section class="product-divider divider">
+			<div class="product-divider divider">
 				<div class="container">
 					<div class="breadcrumbs">
 						<a href="index.html" class="breadcrumbs__main">Главная</a>
 						<a class="breadcrumbs__title">Каталог</a>
 						<a class="breadcrumbs__title">Название товара</a>
 					</div>
+					<button class="btn btn__white product-divider__btn-show">Вернуться назад</button>
 					<div class="product-divider__content divider__content">
 						<img src="img/_src/product-main.png" alt="">
 					</div>
-					<button class="btn btn__white product-divider__btn">Вернуться назад</button>
+					<a href="catalog.html" class="btn btn__white product-divider__btn to-hidden">Вернуться назад</a>
 				</div>
-			</section>
+			</div>
 			<section class="product-describe section-padding">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-5 col-md-12">
 							<div class="row">
-								<div class="col-lg-12 col-md-6" style="padding-bottom: 45px">
+								<div class="col-lg-12 col-md-6 product-describe__first">
 									<div class="card product-describe__card product-describe__comp">
 										<h2 class="title__big product-describe__title">Состав</h2>
 										<p class="product-describe__text">
@@ -380,33 +384,33 @@
 	</footer>
 		<!-- Modal -->
 		<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h1 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h1>
-						<button type="button" class="btn close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						<form action="">
-							<label class="form__label modal-label">
-								<input type="text" placeholder="Имя">
-							</label>
-							<label class="form__label modal-label">
-								<input type="text" placeholder="Телефон">
-							</label>
-							<button class="btn btn__standart modal-submit">отправить</button>
-							<div class="modal-disclaimer">
-								<p class="form__disclaimer">Нажимая "Отправить" вы даете согласие на обработку персональных данных и соглашаетесь с
-									<a href="textPage.html">пользовательским соглашением и политикой конфиденциальности.</a>
-								</p>
-							</div>
-						</form>
-					</div>
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h2>
+					<button type="button" class="btn close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form action="">
+						<label class="form__label modal-label">
+							<input type="text" placeholder="Имя">
+						</label>
+						<label class="form__label modal-label">
+							<input type="text" placeholder="Телефон">
+						</label>
+						<button class="btn btn__standart modal-submit">отправить</button>
+						<div class="modal-disclaimer">
+							<p class="form__disclaimer">Нажимая "Отправить" вы даете согласие на обработку персональных данных и соглашаетесь с
+								<a href="textPage.html">пользовательским соглашением и политикой конфиденциальности.</a>
+							</p>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
+	</div>
 
 		<script src="js/scripts.min.js"></script>
 	</body>
