--- a/app/textPage.html
+++ b/app/textPage.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="format-detection" content="telephone=no"/>
     <meta property="og:image" content="path/to/image.jpg">
     <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
@@ -28,8 +29,11 @@
                 <div class="header__info">
                     <div class="header__info-contacts">
                         <div class="header__info-item">
-                            <span class="header__phone list__item-img">+7 916 123-45-67</span>
-                            <span class="header__mail list__item-img">Mail@mail.ru</span>
+                            <span class="header__address list__item-img">г. Москва, ул. Петровская, д. 135<br> корпус 13.</span>
+                        </div>
+                        <div class="header__info-item">
+                            <a class="header__phone list__item-img">+7 916 123-45-67</a>
+                            <a class="header__mail list__item-img">Mail@mail.ru</a>
                         </div>
                     </div>
                     <div class="header__info-item header__info-call-btn">
@@ -42,9 +46,8 @@
                             <span class="menu-mobile__bar-1"></span>
                             <span class="menu-mobile__bar-2"></span>
                             <span class="menu-mobile__bar-3"></span>
-                            <p>Меню</p>
                         </button>
-                        <button class="btn btn__standart btn__menu-mobile hidden" data-toggle="modal" data-target="#modal">заказать звонок</button>
+                        <img src="img/_src/smallLogo.svg" alt="" width="120">
                     </div>
                     <ul id="menu" class="menu">
                         <li class="menu__item">
@@ -182,8 +185,12 @@
             <div class="col-xl-auto col-md-12  footer__item">
                 <ul class="footer__ul">
                     <li class="header__address list__item-img footer__item-list">г. Москва, ул. Петровская, д. 135<br> корпус 13.</li>
-                    <li class="header__phone list__item-img footer__item-list">+7 916 123-45-67</li>
-                    <li class="header__mail list__item-img footer__item-list">Mail@mail.ru</li>
+                    <li class="header__phone list__item-img footer__item-list">
+                        <a href="">+7 916 123-45-67</a>
+                    </li>
+                    <li class="header__mail list__item-img footer__item-list">
+                        <a href="">Mail@mail.ru</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -194,8 +201,9 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h1>
+                <h2 class="modal-title" id="exampleModalLongTitle">Обратный звонок</h2>
                 <button type="button" class="btn close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
